--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,15 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;900&display=swap');
 
-.main-container {
+main {
     padding: 4rem 6rem;
+}
+
+.main-container {
+
     display: grid;
     grid-template-columns: 5fr 5fr;
 }
 
-.hero{
+.hero {
     display: flex;
     align-items: center;
 }
+
 .hero-info h1 {
     font-family: 'Roboto', sans-serif;
     font-size: 2.5rem;
