--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,7 +12,7 @@
 
 .nav-links a {
     text-decoration: none;
-    color: darkblue;
+    color: purple;
     font-size: 1rem;
     font-weight: 700;
     cursor: pointer;
